opam-version: "2.0"
maintainer:   "leandro@ostera.io"
authors:      "Leandro Ostera"
bug-reports:  "https://github.com/AbstractMachinesLab/caramel/issues"
homepage:     "https://github.com/AbstractMachinesLab/caramel"
dev-repo:     "git+https://github.com/AbstractMachinesLab/caramel.git"
synopsis:     "Libraries to manipulate Erlang sources"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "bisect_ppx" {dev & >= "2.5.0"}
  "dune" {>= "2.7"}
  "menhir"
  "ppx_sexp_conv"
  "sexplib"
]
