[package]
name = "ocaml-tree-sitter"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "*"
ocaml = "*"
tree-sitter =  { path = "/home/ostera/repos/github.com/ostera/tree-sitter/lib" }
tree-sitter-sexp = { git = "https://github.com/AbstractMachinesLab/tree-sitter-sexp", branch = "main" }
