(executable
 (name bootc)
 (libraries bin)
 (instrumentation
  (backend bisect_ppx))
 (modules bootc))

(executable
 (name caramelc)
 (public_name caramelc)
 (package caramel)
 (modules caramelc)
 (libraries bin)
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard -safe-string)))

(alias
 (name caramelc)
 (deps
  (alias stdlib)))
