(library
 (name caramel_compiler)
 (public_name caramel.compiler)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  caramel.compiler.ocaml_to_erlang
  caramel.compiler.ocaml_to_core_erlang
  caramel.compiler.reason_to_erlang
  caramel.compiler.misc
  compiler-libs.common
  compiler-libs.optcomp
  sexplib))

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
