(library
 (name caramel_compiler)
 (public_name caramel.compiler)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  compiler-libs.bytecomp
  compiler-libs.common
  compiler-libs.optcomp
  erlang
  sexplib
  str
  ))

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
