(library
 (name caramel_lsp)
 (public_name caramel.lsp)
 (instrumentation
  (backend bisect_ppx))
 (modules lsp)
 (libraries ocaml-lsp-server))

(executable
 (name main)
 (public_name caramel-lsp)
 (package caramel)
 (modules main info cmd_lsp compiler_version)
 (libraries caramel_lsp cmdliner))

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
