(library
 (name caramel_newcomp)
 (public_name caramel.newcomp)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_sexp_conv))
 (libraries caramel.sugarcane erlang fpath sexplib str logs logs.fmt fmt.tty))

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
