(library
 (name caramel_newcomp)
 (public_name caramel.newcomp)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_sexp_conv))
 (libraries
  caramel.sugarcane
  caramel.typing
  caramel.misc
  caramel.newsyntax
  sexplib
  str
  logs
  bos
  logs.fmt
  fmt.tty))

(rule
 (targets version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
