(library
 (name erlang)
 (public_name erlang)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_sexp_conv))
 (libraries sexplib))

(ocamllex erl_lexer core_lexer)

(menhir
 (modules erl_parser core_parser)
 (flags --explain --dump))

(rule
 (deps erl_parser.messages)
 (action
  (with-stdout-to
   erl_parser_messages.ml
   (run
    menhir
    %{dep:erl_parser.mly}
    --compile-errors
    %{dep:erl_parser.messages}))))
