(rule
 (targets libocaml_tree_sitter.a dllocaml_tree_sitter.so)
 (deps
  (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/target)
   (run sh -c
     "mv %{project_root}/target/debug/libocaml_tree_sitter.so ./dllocaml_tree_sitter.so 2> /dev/null || mv %{project_root}/target/debug/libocaml_tree_sitter.dylib ./dllocaml_tree_sitter.so")
   (run mv %{project_root}/target/debug/libocaml_tree_sitter.a
     libocaml_tree_sitter.a))))

(library
 (name tree_sitter)
 (foreign_archives ocaml_tree_sitter)
 (c_library_flags
  (-lpthread -lc -lm)))
