(library
 (name caramel_compiler)
 (public_name caramel.compiler)
 (libraries caramel.compiler.ocaml_to_erlang
   caramel.compiler.ocaml_to_core_erlang caramel.compiler.ocaml_archive
   caramel.compiler.erlang_to_native caramel.compiler.misc
   compiler-libs.common compiler-libs.optcomp sexplib))

(rule
 (targets compiler_version.ml)
 (deps
  (:input-file ../../version.ml.in))
 (action
  (copy %{input-file} %{targets})))
