(rule
  (alias runtest)
  (mode promote)
  (deps apply.ml)
  (targets apply.erl apply__funs.erl)
  (action (run %{bin:caramelc} compile %{deps})))

(rule
  (alias runtest)
  (deps apply.erl)
  (targets apply.erl.output)
  (action (run mv apply.erl apply.erl.output)))

(rule
  (alias runtest)
  (action (diff apply.erl.expected apply.erl.output)))
