(lang dune 2.8)
(name ocamlformat_lib)

(generate_opam_files true)

(maintainers "Leandro Ostera <leandro@ostera.io>")

(package
 (name ocamlformat_lib)
 (synopsis "Auto-formatter for OCaml code")
 (description
   "OCamlFormat is a tool to automatically format OCaml code in a uniform style.")
 (depends
  (ocaml
   (and
    (>= 4.06)
    (< 4.13)))
  (ocaml
   (and
    :with-test
    (< 4.12)))
  ocaml-version
  (alcotest :with-test)
  (base
   (and
    (>= v0.12.0)
    (< v0.15)))
  base-unix
  cmdliner
  dune-build-info
  fix
  fpath
  menhir
  (ocp-indent :with-test)
  (odoc
   (>= 1.4.2))
  (ppxlib
   (>= 0.18.0))
  re
  (stdio
   (< v0.15))
  (uuseg
   (>= 10.0.0))
  (uutf
   (>= 1.0.1))))
(using menhir 2.1)
