(rule
 (alias stdlib)
 (targets beam.cmi binary.cmi calendar.cmi erlang.cmi ets.cmi io.cmi
   lists.cmi maps.cmi process.cmi process.erl timer.cmi caramel_runtime.cmi)
 (deps ../../bin/main.exe)
 (action
  (run %{dep:../../bin/main.exe} compile --no-stdlib --target=erlang
    --target=erlang beam.ml binary.ml calendar.ml caramel_runtime.ml
    erlang.ml ets.ml io.mli io.ml lists.ml maps.ml process.ml timer.ml)))

(install
 (section lib)
 (files
  (beam.cmi as ./stdlib/beam/beam.cmi)
  (binary.cmi as ./stdlib/beam/binary.cmi)
  (calendar.cmi as ./stdlib/beam/calendar.cmi)
  (erlang.cmi as ./stdlib/beam/erlang.cmi)
  (ets.cmi as ./stdlib/beam/ets.cmi)
  (io.cmi as ./stdlib/beam/io.cmi)
  (lists.cmi as ./stdlib/beam/lists.cmi)
  (maps.cmi as ./stdlib/beam/maps.cmi)
  (process.cmi as ./stdlib/beam/process.cmi)
  (process.erl as ./stdlib/beam/process.erl)
  (caramel_runtime.erl as ./stdlib/beam/caramel_runtime.erl)
  (timer.cmi as ./stdlib/beam/timer.cmi))
 (package caramel))
