(rule
 (alias stdlib)
 (targets stdlib.cma stdlib.cmi stdlib.cmo)
 (deps ../../bootc.exe)
 (action
  (run %{dep:../../bootc.exe} compile --no-stdlib --target=archive stdlib.ml)))

(install
 (section lib)
 (files
  (stdlib.cmi as ./stdlib/ocaml/stdlib.cmi)
  (stdlib.cma as ./stdlib/ocaml/stdlib.cma)
  (stdlib.cmo as ./stdlib/ocaml/stdlib.cmo))
 (package caramel))
