(rule
 (alias stdlib)
 (targets stdlib.cma stdlib.cmi)
 (deps ../../bootc.exe)
 (action
  (run %{dep:../../bootc.exe} compile --no-stdlib --target=archive stdlib.ml)))

(install
 (section lib)
 (files
  (stdlib.cmi as ./stdlib/ocaml/stdlib.cmi)
  (stdlib.cma as ./stdlib/ocaml/stdlib.cma))
 (package caramel))
