; we cannot use the normal test alias because cinaps overtakes it

(library
 (name lsp_fiber_tests)
 (inline_tests)
 (preprocess
  (pps ppx_expect))
 (enabled_if
  (>= %{ocaml_version} 4.08))
 (libraries
  base
  fiber
  fiber_test
  fiber_unix
  jsonrpc
  jsonrpc_fiber
  lsp
  lsp_fiber
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.common
  ppx_expect.config
  ppx_expect.config_types
  ppx_inline_test.config
  ppx_yojson_conv_lib
  stdune
  threads.posix
  yojson))
